--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,189 +1,170 @@
-  <div class="container my-4">
-      <div class="row justify-content-center">
-        <div class="col-lg-9">
-          <!-- <h1 class="mb-3">Register</h1> -->
-          <form [formGroup]="signUpForm" (ngSubmit)="onSubmit()">
-            <div class="row g-3">
-              <h3>Student Information</h3>
-              <hr/>
-              <div class="col-md-6">
-                <label for="firstname" class="form-label" >
-                  <span *ngIf = "!signUpForm.get('firstname')?.valid && signUpForm.get('firstname')?.touched" style="color: red;">*</span>First Name</label>
-                <input type="text" class="form-control" id="firstname" 
-                placeholder="Enter first name"
-                formControlName="firstname">
-              </div>
-            
-              <div class="col-md-6">
-                <label for="lastname" class="form-label">Last Name</label>
-                <span *ngIf = "!signUpForm.get('lastname')?.valid && signUpForm.get('lastname')?.touched" style="color: red;">*</span>
-                <input type="text" class="form-control" id="lastname"
-                placeholder="Enter last name"
-                formControlName="lastname">
-              </div>
-              <div class="col-md-6">
-                <label for="email" class="form-label">Email</label>
-                <input type="email" class="form-control" id="email" 
-                placeholder="Enter your e-mail"
-                formControlName="email">
-                <span
-                *ngIf="!signUpForm.get('email')?.valid && signUpForm.get('email')?.touched"
-                class="help-block" style="color: red;">Please enter a valid email!</span>
-              </div>
-              <div class="col-md-6">
-                <label for="dob" class="form-label">
-                  <span *ngIf = "!signUpForm.get('dob')?.valid && signUpForm.get('dob')?.touched" style="color: red;">*</span>
-                  Date of Birth</label>
-                <input type="date" class="form-control"
-                id="dob" formControlName="dob">
-              </div>
-              <div class="col-md-6">
-                  <label for="board" class="form-label">Board
-                    <span *ngIf = "!signUpForm.get('board')?.valid && signUpForm.get('board')?.touched" style="color: red;">*</span>
-                  </label>
-                  <select class="form-control" id="board" formControlName="board" style="padding: 10px;">
-                    <option value="">-- Select Board -- </option>
-                    <option value="Dhaka">Dhaka</option>
-                    <option value="CTG">CTG</option>
-                    <option value="Khulna">Khulna</option>
-                  
-                </select>
-                </div>
+<div class="container my-4">
+  <div class="row justify-content-center">
+    <div class="col-lg-9">
+      <!-- <h1 class="mb-3">Register</h1> -->
+      <form [formGroup]="signUpForm" (ngSubmit)="onSubmit()">
+        <div class="row g-3">
+          <h3>Student Information</h3>
+          <hr />
+          <div class="col-md-6">
+            <label for="firstName" class="form-label">First Name
+              <span *ngIf="!signUpForm.get('firstName')?.valid && signUpForm.get('firstName')?.touched"
+                style="color: red;">*</span></label>
+            <input type="text" class="form-control" id="firstName" placeholder="Enter first name"
+              formControlName="firstName">
+          </div>
 
-                <div class="col-md-6">
-                  <label for="contact" class="form-label">Contact</label>
-                  <input type="tel" class="form-control" id="contact" 
-                  pattern="^(?:\+?88)?01[15-9]\d{8}$"
-                  placeholder="Enter your number"
-                  formControlName="contact">
-                  <span
-                  *ngIf="!signUpForm.get('contact')?.valid && signUpForm.get('contact')?.touched"
-                  class="help-block">Please enter a valid number!</span>
-                </div>
+          <div class="col-md-6">
+            <label for="lastName" class="form-label">Last Name</label>
+            <span *ngIf="!signUpForm.get('lastName')?.valid && signUpForm.get('lastName')?.touched"
+              style="color: red;">*</span>
+            <input type="text" class="form-control" id="lastName" placeholder="Enter last name"
+              formControlName="lastName">
+          </div>
+          <div class="col-md-6">
+            <label for="email" class="form-label">Email</label>
+            <input type="email" class="form-control" id="email" placeholder="Enter your e-mail" formControlName="email">
+            <span *ngIf="!signUpForm.get('email')?.valid && signUpForm.get('email')?.touched" class="help-block"
+              style="color: red;">Please enter a valid email!</span>
+          </div>
+          <div class="col-md-6">
+            <label for="dob" class="form-label"> Date of Birth
+              <span *ngIf="!signUpForm.get('dob')?.valid && signUpForm.get('dob')?.touched" style="color: red;">*</span>
+            </label>
+            <input type="date" class="form-control" id="dob" formControlName="dob">
+          </div>
+          <div class="col-md-6">
+            <label for="board" class="form-label">Board
+              <span *ngIf="!signUpForm.get('board')?.valid && signUpForm.get('board')?.touched"
+                style="color: red;">*</span>
+            </label>
+            <select class="form-control" id="board" formControlName="board" style="padding: 10px;">
+              <option value="">-- Select Board -- </option>
+              <option value="Dhaka">Dhaka</option>
+              <option value="CTG">Chittagong</option>
+              <option value="Khulna">Khulna</option>
+              <option value="Khulna">Comilla</option>
+              <option value="Khulna">Jessore</option>
+              <option value="Khulna">Barisal</option>
+              <option value="Khulna">Mymensingh</option>
+              <option value="Khulna">Rajshahi</option>
+              <option value="Khulna">Sylhet</option>
+              <option value="Khulna">Dinajpur</option>
 
-                <div class="col-12">
-                  <label for="address" class="form-label">
-                    <span *ngIf = "!signUpForm.get('address')?.valid && signUpForm.get('address')?.touched" style="color: red;">*</span>
-                    Address</label>
-                
-                  <input type="text" class="form-control" id="address" 
-                  formControlName="address"
-                  placeholder="Enter your address">
-                </div>
+            </select>
+          </div>
+
+          <div class="col-md-6">
+            <label for="contact" class="form-label">Contact</label>
+            <input type="tel" class="form-control" id="contact" pattern="^(?:\+?88)?01[15-9]\d{8}$"
+              placeholder="Enter your number" formControlName="contact">
+            <span *ngIf="!signUpForm.get('contact')?.valid && signUpForm.get('contact')?.touched"
+              class="help-block">Please enter a valid number!</span>
+          </div>
+
+          <div class="col-12">
+            <label for="address" class="form-label"> Address
+              <span *ngIf="!signUpForm.get('address')?.valid && signUpForm.get('address')?.touched"
+                style="color: red;">*</span>
+            </label>
+
+            <input type="text" class="form-control" id="address" formControlName="address"
+              placeholder="Enter your address">
+          </div>
+
+          <div class="col-12">
+            <label for="password" class="form-label"> Password
+              <span *ngIf="!signUpForm.get('password')?.valid && signUpForm.get('password')?.touched"
+                style="color: red;">*</span>
+            </label>
+
+            <input type="password" class="form-control" id="password" formControlName="password"
+              placeholder="Enter your password">
+          </div>
           <!-- ---------------------------------------SSC------------------------------------- -->
-                <div  formArrayName="ssc">
-                  <div class="d-flex main justify-content-between">
-                  <label  class="m-2">SSC</label>
-                    <img class="m-2" src="assets/add.png" style="width: 25px;" (click)="onAddSubjectOfSSC()">
-                </div>
-            <div class="form-group"
-              *ngFor="let sscControl of formDataSSC.controls; let i=index"
-              formGroupName="{{i}}"> 
+          <div formArrayName="ssc">
+            <div class="d-flex main justify-content-between">
+              <label class="m-2">SSC</label>
+              <img class="m-2" src="assets/add.png" style="width: 25px;" (click)="onAddSubjectOfSSC()">
+            </div>
+            <div class="form-group" *ngFor="let sscControl of formDataSSC.controls; let i=index" formGroupName="{{i}}">
               <div class="row" style="margin-top: 5px;">
                 <div class="col-md-6">
-                  <select class="form-control" style="padding: 10px;"  formControlName="subject">
-                      <option value="">-- Select Subject -- </option>
-                      <option value="Math">Math</option>
-                      <option value="English">English</option>
-                      <option value="Physics">Physics</option>
-                      <option value="Chemistry">Chemistry</option>
+                  <select class="form-control" style="padding: 10px;" formControlName="subject" id="{{i}}">
+                    <option value="">-- Select Subject -- </option>
+                    <option *ngFor="let sscSub of sscSubjects; let i=index" value="{{sscSub}}">
+                      {{sscSub}}
+                    </option>
                   </select>
                 </div>
-              
+
                 <div class="col-md-5">
                   <select class="form-control" style="padding: 10px;" formControlName="gpa">
-                    <option value="">-- Select GPA -- </option>
-                    <option value="5.00">5.00</option>
-                    <option value="4.50">4.50</option>
-                    <option value="4.00">4.00</option>
-                    <option value="3.50">3.50</option>
-                </select>
+                    <option value="">-- Select Grade -- </option>
+                    <option *ngFor="let grade of grades; let i=index" value="{{grade}}">
+                      {{grade}}
+                    </option>
+                    <!-- <option value="5.00">{{grades}}</option> -->
+                    <!-- <option value="4.50">4.50</option>
+                        <option value="4.00">4.00</option>
+                        <option value="3.50">3.50</option> -->
+                  </select>
                 </div>
-                <img class="m-2" src="assets/rem.png" style="width: 54px;" (click)="removeSSC(i)">
+                <img class="m-2" src="assets/minus.png" style="width: 53px;" (click)="removeSSC(i)">
               </div>
-              </div>
             </div>
-
-              <!-- ---------------------------------------HSC------------------------------------- -->
-
-            <div  formArrayName="hsc">
-              <div class="d-flex main justify-content-between">
-              <label  class="m-2">HSC</label>
-                <img class="m-2" src="assets/add.png" style="width: 25px;" (click)="onAddSubjectOfHSC()">
-            </div>
-        <div class="form-group"
-          *ngFor="let hscControl of formDataHSC.controls; let i=index"
-          formGroupName="{{i}}"> 
-          <div class="row" style="margin-top: 5px;">
-            
-            <div class="col-md-6">
-              <select class="form-control" style="padding: 10px;"  formControlName="subject">
-                <option value="">-- Select Subject -- </option>
-                <option value="Math">Math</option>
-                <option value="English">English</option>
-                <option value="Physics">Physics</option>
-                <option value="Chemistry">Chemistry</option>
-            </select>
-            </div>
-          
-            <div class="col-md-5">
-              <select class="form-control"  formControlName="gpa" id="gpa" style="padding: 10px;">
-                <option value="">-- Select GPA -- </option>
-                <option value="5.00">5.00</option>
-                <option value="4.50">4.50</option>
-                <option value="4.00">4.00</option>
-                <option value="3.50">3.50</option>
-            </select>
-            </div>
-            <img class="m-2" src="assets/rem.png" style="width: 54px;" (click)="removeHSC(i)">
           </div>
-          </div>
-        </div>
 
-                <!-- <div class="d-flex main justify-content-between">
-                  <label  class="m-2">HSC</label>
-                  <img class="m-2" src="assets/add.png" style="width: 25px;">
-              </div>
+          <!-- ---------------------------------------HSC------------------------------------- -->
 
-              <div class="col-md-6">
-                <select class="form-control" id="result1" formControlName="result1" style="padding: 10px;">
+          <div formArrayName="hsc">
+            <div class="d-flex main justify-content-between">
+              <label class="m-2">HSC</label>
+              <img class="m-2" src="assets/add.png" style="width: 25px;" (click)="onAddSubjectOfHSC()">
+            </div>
+            <div class="form-group" *ngFor="let hscControl of formDataHSC.controls; let i=index" formGroupName="{{i}}">
+              <div class="row" style="margin-top: 5px;">
+
+                <div class="col-md-6">
+                  <select class="form-control" style="padding: 10px;" formControlName="subject">
                     <option value="">-- Select Subject -- </option>
-                    <option value="5.00">5.00</option>
+                    <option *ngFor="let hscSub of hscSubjects; let i=index" value="{{hscSub}}">
+                      {{hscSub}}
+                    </option>
+                    <!-- <option value="Math">Math</option>
+                    <option value="English">English</option>
+                    <option value="Physics">Physics</option>
+                    <option value="Chemistry">Chemistry</option> -->
+                  </select>
+                </div>
+
+                <div class="col-md-5">
+                  <select class="form-control" formControlName="gpa" id="gpa" style="padding: 10px;">
+                    <option value="">-- Select Grade -- </option>
+                    <option *ngFor="let grade of grades; let i=index" value="{{grade}}">
+                      {{grade}}
+                    </option>
+                    <!-- <option value="5.00">5.00</option>
                     <option value="4.50">4.50</option>
                     <option value="4.00">4.00</option>
-                    <option value="3.50">3.50</option>
-                </select>
-              </div>
-            
-              <div class="col-md-6">
-                <select class="form-control" id="result2" formControlName="result2" style="padding: 10px;">
-                  <option value="">-- Select GPA -- </option>
-                  <option value="5.00">5.00</option>
-                  <option value="4.50">4.50</option>
-                  <option value="4.00">4.00</option>
-                  <option value="3.50">3.50</option>
-              </select>
-              </div> -->
-
-
-
-              
-              <div class="col-12">
-                <div class="row">
-                  <div class="col-12">
-                    <button type="submit"
-                    class="btn w-100 fw-bold" 
-                    [disabled]="signUpForm.invalid"
-                    (click)="onAddToList()" 
-                    routerLink="/students"
-                    style="background-color: #6460D1; color: white;"
-                    >Submit</button>
-                  </div>
+                    <option value="3.50">3.50</option> -->
+                  </select>
                 </div>
+                <img class="m-2" src="assets/minus.png" style="width: 53px; " (click)="removeHSC(i)">
               </div>
             </div>
-          </form>
+          </div>
+
+          <div class="col-12">
+            <div class="row">
+              <div class="col-12">
+                <button type="submit" class="btn w-100 fw-bold" [disabled]="signUpForm.invalid"
+                  style="background-color: #6460D1; color: white;">Submit</button>
+              </div>
+            </div>
+          </div>
         </div>
-      </div>
+      </form>
     </div>
-    
+  </div>
+</div>
