--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,28 +1,56 @@
-  <nav class="navbar navbar-light">
-    <div class="container-fluid">
-      <a class="navbar-brand">
-        <img src="assets/logo.png" style="width: 45px;">
-        <!-- <span class="h5 fw-bold">MySchool</span> -->
-        MySchool
-      </a>
-      <form class="d-flex">
-        <button class="btn " type="submit" style="margin-right: 5px" routerLinkActive="active" routerLink="/login">Login</button>
-        <button class="btn " type="submit" style="margin-right: 5px" routerLinkActive="active" routerLink="/register">Register</button>
-        <button class="btn " type="submit" routerLinkActive="active" routerLink="/students">Dashboard</button>
-      </form>
-    </div>
-  </nav>
-  
+    <nav class="navbar navbar-light">
+      <div class="container-fluid">
+        <a class="navbar-brand">
+          <img src="assets/graduation.png" style="width: 45px;">
+          <!-- <span class="h5 fw-bold">MySchool</span> -->
+          MySchool
+        </a>
+        <form class="d-flex">
+          <button class="btn " 
+          type="submit" 
+          style="margin-right: 5px" 
+          routerLinkActive="active" 
+          routerLink="/login"
+          *ngIf="showLogin"
+          >Login</button>
+
+          <button class="btn " 
+          type="submit" 
+          style="margin-right: 5px" 
+          routerLinkActive="active"
+          routerLink="/register"
+          *ngIf="showReg"
+          >Register</button>
+
+
+          <button class="btn"
+          type="submit" 
+          style="margin-right: 5px" 
+          routerLinkActive="active"
+            routerLink="/students"
+            *ngIf="loggedIn"
+            >Dashboard</button>
+
+            <button class="btn"
+            type="submit" 
+            routerLinkActive="active"
+              *ngIf="loggedIn"
+              (click)="logout()"
+              >LogOut</button>
+        </form>
+      </div>
+    </nav>
+    
 
 
 
 
 
-  <!-- <ul class="nav nav-pills mb-3 shadow-sm" id="pills-tab" role="tablist">
-      <li class="nav-item">
-        <a class="nav-link" id="pills-home-tab" data-toggle="pill" routerLinkActive="active" routerLink="/register" role="tab" >Registration</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" id="pills-profile-tab" data-toggle="pill"  routerLinkActive="active" routerLink="/students" role="tab" >Students</a>
-      </li>
-    </ul> -->
+    <!-- <ul class="nav nav-pills mb-3 shadow-sm" id="pills-tab" role="tablist">
+        <li class="nav-item">
+          <a class="nav-link" id="pills-home-tab" data-toggle="pill" routerLinkActive="active" routerLink="/register" role="tab" >Registration</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" id="pills-profile-tab" data-toggle="pill"  routerLinkActive="active" routerLink="/students" role="tab" >Students</a>
+        </li>
+      </ul> -->
