--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,60 +1,46 @@
-  <section class="vh-100">
-      <div class="container-fluid h-custom">
-        <div class="row d-flex justify-content-center align-items-center h-100">
-          <div class="col-md-9 col-lg-6 col-xl-5">
-            <img src="assets/math.png"
-              class="img-fluid" alt="Sample image">
-          </div>
-          <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
-            <form (ngSubmit)="onSubmit()" #f="ngForm">
-              <div class="form-outline mb-4">
-                  <span class="h1 fw-bold" style="margin-top: 10px;">Sign In</span>
-                </div>
-            
-              
-              <!-- Email input -->
-              <div class="form-outline mb-4">
-                <input type="email" id="email" 
-                class="form-control form-control-lg"
-                ngModel
-                name="email"
-                required
-                email
-                pattern="^([a-zA-Z0-9_\-\.]+)@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.)|(([a-zA-Z0-9\-]+\.)+))([a-zA-Z]{2,4}|[0-9]{1,3})(\]?)$"
-              #email="ngModel"
-                  placeholder="Enter a valid email address" />
-                  <span class="help-block" *ngIf="!email.valid && email.touched" style="color: red;">Please enter a valid e-mail!</span>
-              </div>
-    
-            
-              <div class="form-outline mb-3">
-                <input type="tel" id="phone" 
-                class="form-control form-control-lg"
-                  placeholder="Enter your contact number" 
-                  ngModel
-                  name="phone"
-                  required
-                  #phone="ngModel"
-                  pattern="^(?:\+?88)?01[15-9]\d{8}$"/>
-                  <span class="help-block" *ngIf="!phone.valid && phone.touched" style="color: red;">Please enter a valid mobile number!</span>
-              </div>
-    
-              <div class="d-grid gap-2">
-                  
-                  <button class="btn"
-                  type="submit"
-                    style="background-color: #6460D1; color: white;"
-                    [disabled]="f.invalid"
-                    routerLink="/students"
-                    >Sign In</button>
-                </div>
-    
-    
-            </form>
-          </div>
-        </div>
+<section class="vh-100">
+  <div class="container-fluid h-custom">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="col-md-9 col-lg-6 col-xl-5">
+        <img src="assets/math.png" class="img-fluid" alt="Sample image">
       </div>
+      <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
+        <form (ngSubmit)="onSubmit()" #f="ngForm">
+          <div class="form-outline mb-4">
+            <span class="h1 fw-bold" style="margin-top: 10px;">Sign In</span>
+          </div>
 
-  
-      
-    </section>
+
+          <!-- Email input -->
+          <div class="form-outline mb-4">
+            <input type="email" id="email" class="form-control form-control-lg" ngModel name="email" required email
+              pattern="^([a-zA-Z0-9_\-\.]+)@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.)|(([a-zA-Z0-9\-]+\.)+))([a-zA-Z]{2,4}|[0-9]{1,3})(\]?)$"
+              #email="ngModel" placeholder="Enter a valid email address" />
+            <span class="help-block" *ngIf="!email.valid && email.touched" style="color: red;">Please enter a valid
+              e-mail!</span>
+          </div>
+
+
+          <div class="form-outline mb-3">
+            <input type="password" id="password" class="form-control form-control-lg" placeholder="Enter your password"
+              ngModel name="password" required #password="ngModel"/>
+            <span class="help-block" *ngIf="!password.valid && password.touched" style="color: red;">Please enter a valid
+              password!</span>
+          </div>
+
+          <div class="d-grid gap-2">
+
+            <button class="btn" type="submit" style="background-color: #6460D1; color: white;" [disabled]="f.invalid"
+              >Sign In</button>
+              <span class="help-block" *ngIf="show" style="color: red;">Please enter a valid
+                email or mobile number!</span>
+          </div>
+        
+        </form>
+      </div>
+    </div>
+  </div>
+
+
+
+</section>
