--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,3 +1,11 @@
 input.ng-invalid.ng-touched{
     border: 1px solid red;
 }
+
+.help-block{
+    color: red;
+}
+.btn{
+    background-color: #6460D1; 
+    color: white;
+}
