--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -16,7 +16,7 @@
             <input type="email" id="email" class="form-control form-control-lg" ngModel name="email" required email
               pattern="^([a-zA-Z0-9_\-\.]+)@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.)|(([a-zA-Z0-9\-]+\.)+))([a-zA-Z]{2,4}|[0-9]{1,3})(\]?)$"
               #email="ngModel" placeholder="Enter a valid email address" />
-            <span class="help-block" *ngIf="!email.valid && email.touched" style="color: red;">Please enter a valid
+            <span class="help-block" *ngIf="!email.valid && email.touched">Please enter a valid
               e-mail!</span>
           </div>
 
@@ -24,15 +24,15 @@
           <div class="form-outline mb-3">
             <input type="password" id="password" class="form-control form-control-lg" placeholder="Enter your password"
               ngModel name="password" required #password="ngModel"/>
-            <span class="help-block" *ngIf="!password.valid && password.touched" style="color: red;">Please enter a valid
+            <span class="help-block" *ngIf="!password.valid && password.touched">Please enter a valid
               password!</span>
           </div>
 
           <div class="d-grid gap-2">
 
-            <button class="btn" type="submit" style="background-color: #6460D1; color: white;" [disabled]="f.invalid"
+            <button class="btn" type="submit" [disabled]="f.invalid"
               >Sign In</button>
-              <span class="help-block" *ngIf="show" style="color: red;">Please enter a valid
+              <span class="help-block" *ngIf="show" >Please enter a valid
                 email or mobile number!</span>
           </div>
         
