--- a/src/app/students/students.component.html
+++ b/src/app/students/students.component.html
@@ -1,70 +1,75 @@
-<div class="container" >
+<div class="container">
     <div class="row">
         <h2>Registered Students
-            <img class="m-2" src="assets/add.png" routerLink="/register" style="width: 25px; float:right;">
+            <!-- <img class="m-2" src="assets/add.png" routerLink="/register" style="width: 25px; float:right;"> -->
+            <button class="btn m-2" type="button" routerLink="/register" style="float:right;">Add New Students</button>
         </h2>
         <hr style="color: #807dd7;" />
     </div>
-    <div class="info-container" *ngFor="let student of studentList; let i=index;">                
-                <!-- Student Info -->
-    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4">
-        <div class="col">
-            <img src="assets/graduate.png" style="width: 70px;">
-        </div>
-        <div class="col">
-            <div class="row">
-                Name: {{student.firstName}} {{student.lastName}}
+    <div class="info-container" *ngFor="let student of studentList; let i=index;">
+        <!-- Student Info -->
+
+        <div class="row" style="margin-bottom: 10px;">
+            <div class="col">
+                <img src="assets/graduate.png" style="width: 70px;">
+                <img class="m-2" src="assets/trash.png" style="width: 24px; float: right;"
+                    (click)="deleteStudent(student.id)">
+                <img class="m-2" src="assets/pen.png" style="width: 25px; float: right;"
+                    (click)="editStudent(student.id)">
             </div>
-            <div class="row">
-                Email: {{student.email}}
-            </div>
-        </div>
-        <div class="col">
-            <div class="row">
-                <!-- Contact: {{student.contact}} -->
-                Contact: {{student.dob}}
-            </div>
-            <div class="row">
-                Date of Birth: {{student.dob}}
-            </div>
+
         </div>
 
-        <div class="col">
-            <div class="row">
+        <div class="row row-cols-3">
+
+            <div class="col" style="color: #2a2950; font-size: large; font-weight:bolder;">
+                <a> {{student.firstName}} {{student.lastName}}</a>
+            </div>
+            <div class="col">
+                Date of Birth: {{student.dob}}
+            </div>
+
+
+            <div class="col">
+                Contact: {{student.contact}}
+            </div>
+            <div class="col em">
+                {{student.email}}
+            </div>
+            <div class="col">
                 Board: {{student.board}}
             </div>
-            <div class="row">
+            <div class="col">
                 Address: {{student.address}}
             </div>
         </div>
-        </div>
 
-                                     <!-- Student RESULT -->
+        <!-- Student RESULT -->
 
         <div class="row">
-            <label style="margin-top: 5px;"><b>Secondary School Certificate</b></label>
-            <hr style="color: #6460D1; margin-top: 5px;" />
+            <label style="margin-top: 10px; color: #4b497f;"><b>Secondary School Certificate</b></label>
+            <hr style="color: #6460D1;margin-bottom: 5px;" />
         </div>
-        <div class="row row-cols-3" >
+        <div class="row row-cols-3">
             <div class="col" *ngFor="let res of student.ssc">
-                {{res.subject}} : Grade {{res.gpa}}
+                {{res.subject}} : {{res.gpa}}
             </div>
         </div>
 
         <div class="row">
-            <label style="margin-top: 5px;"><b>Higher Secondary School Certificate</b></label>
-            <hr style="color: #6460D1; margin-top: 5px;" />
+            <label style="margin-top: 10px; color: #4b497f;"><b>Higher Secondary School Certificate</b></label>
+            <hr style="color: #6460D1; margin-bottom: 5px;" />
         </div>
 
 
-        <div class="row row-cols-3" >
+        <div class="row row-cols-3">
             <div class="col" *ngFor="let res of student.hsc">
-                {{res.subject}} : Grade {{res.gpa}}
+                {{res.subject}} : {{res.gpa}}
             </div>
         </div>
 
         <!-- <hr style="margin-top: 5px;"/> -->
     </div>
 
-    
+
 </div>
