--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -4,57 +4,57 @@
       <!-- <h1 class="mb-3">Register</h1> -->
       <form [formGroup]="signUpForm" (ngSubmit)="onSubmit()">
         <div class="row g-3">
-          <h3>Student Information</h3>
+          <h3>{{editmode?'Edit Student' : 'Student Information'}}</h3>
           <hr />
-          <div class="col-md-6">
+          <div class="col-md-12">
             <label for="firstName" class="form-label">First Name
               <span *ngIf="!signUpForm.get('firstName')?.valid && signUpForm.get('firstName')?.touched"
-                style="color: red;">*</span></label>
+                >*</span></label>
             <input type="text" class="form-control" id="firstName" placeholder="Enter first name"
               formControlName="firstName">
           </div>
 
-          <div class="col-md-6">
+          <div class="col-md-12">
             <label for="lastName" class="form-label">Last Name</label>
             <span *ngIf="!signUpForm.get('lastName')?.valid && signUpForm.get('lastName')?.touched"
-              style="color: red;">*</span>
+              >*</span>
             <input type="text" class="form-control" id="lastName" placeholder="Enter last name"
               formControlName="lastName">
           </div>
-          <div class="col-md-6">
+          <div class="col-md-12">
             <label for="email" class="form-label">Email</label>
             <input type="email" class="form-control" id="email" placeholder="Enter your e-mail" formControlName="email">
             <span *ngIf="!signUpForm.get('email')?.valid && signUpForm.get('email')?.touched" class="help-block"
-              style="color: red;">Please enter a valid email!</span>
+              >Please enter a valid email!</span>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-12">
             <label for="dob" class="form-label"> Date of Birth
-              <span *ngIf="!signUpForm.get('dob')?.valid && signUpForm.get('dob')?.touched" style="color: red;">*</span>
+              <span *ngIf="!signUpForm.get('dob')?.valid && signUpForm.get('dob')?.touched" >*</span>
             </label>
             <input type="date" class="form-control" id="dob" formControlName="dob">
           </div>
-          <div class="col-md-6">
+          <div class="col-md-12">
             <label for="board" class="form-label">Board
               <span *ngIf="!signUpForm.get('board')?.valid && signUpForm.get('board')?.touched"
-                style="color: red;">*</span>
+                >*</span>
             </label>
-            <select class="form-control" id="board" formControlName="board" style="padding: 10px;">
+            <select class="form-control" id="board" formControlName="board">
               <option value="">-- Select Board -- </option>
               <option value="Dhaka">Dhaka</option>
-              <option value="CTG">Chittagong</option>
+              <option value="Chittagong">Chittagong</option>
               <option value="Khulna">Khulna</option>
-              <option value="Khulna">Comilla</option>
-              <option value="Khulna">Jessore</option>
-              <option value="Khulna">Barisal</option>
-              <option value="Khulna">Mymensingh</option>
-              <option value="Khulna">Rajshahi</option>
-              <option value="Khulna">Sylhet</option>
-              <option value="Khulna">Dinajpur</option>
+              <option value="Comilla">Comilla</option>
+              <option value="Jessore">Jessore</option>
+              <option value="Barisal">Barisal</option>
+              <option value="Mymensingh">Mymensingh</option>
+              <option value="Rajshahi">Rajshahi</option>
+              <option value="Sylhet">Sylhet</option>
+              <option value="Dinajpur">Dinajpur</option>
 
             </select>
           </div>
 
-          <div class="col-md-6">
+          <div class="col-md-12">
             <label for="contact" class="form-label">Contact</label>
             <input type="tel" class="form-control" id="contact" pattern="^(?:\+?88)?01[15-9]\d{8}$"
               placeholder="Enter your number" formControlName="contact">
@@ -62,20 +62,20 @@
               class="help-block">Please enter a valid number!</span>
           </div>
 
-          <div class="col-12">
+          <div class="col-md-12">
             <label for="address" class="form-label"> Address
               <span *ngIf="!signUpForm.get('address')?.valid && signUpForm.get('address')?.touched"
-                style="color: red;">*</span>
+                >*</span>
             </label>
 
             <input type="text" class="form-control" id="address" formControlName="address"
               placeholder="Enter your address">
           </div>
 
-          <div class="col-12">
+          <div class="col-md-12" *ngIf="!editmode">
             <label for="password" class="form-label"> Password
               <span *ngIf="!signUpForm.get('password')?.valid && signUpForm.get('password')?.touched"
-                style="color: red;">*</span>
+                >*</span>
             </label>
 
             <input type="password" class="form-control" id="password" formControlName="password"
@@ -85,12 +85,13 @@
           <div formArrayName="ssc">
             <div class="d-flex main justify-content-between">
               <label class="m-2">SSC</label>
-              <img class="m-2" src="assets/add.png" style="width: 25px;" (click)="onAddSubjectOfSSC()">
+              <img class="m-2" src="assets/add.png" (click)="onAddSubjectOfSSC()">
             </div>
             <div class="form-group" *ngFor="let sscControl of formDataSSC.controls; let i=index" formGroupName="{{i}}">
-              <div class="row" style="margin-top: 5px;">
+              <div class="row">
                 <div class="col-md-6">
-                  <select class="form-control" style="padding: 10px;" formControlName="subject" id="{{i}}">
+                  <select class="form-control" formControlName="subject" id="{{i}}" #subject
+                    >
                     <option value="">-- Select Subject -- </option>
                     <option *ngFor="let sscSub of sscSubjects; let i=index" value="{{sscSub}}">
                       {{sscSub}}
@@ -99,18 +100,17 @@
                 </div>
 
                 <div class="col-md-5">
-                  <select class="form-control" style="padding: 10px;" formControlName="gpa">
+                  <select class="form-control" formControlName="gpa">
                     <option value="">-- Select Grade -- </option>
                     <option *ngFor="let grade of grades; let i=index" value="{{grade}}">
                       {{grade}}
                     </option>
-                    <!-- <option value="5.00">{{grades}}</option> -->
-                    <!-- <option value="4.50">4.50</option>
-                        <option value="4.00">4.00</option>
-                        <option value="3.50">3.50</option> -->
                   </select>
                 </div>
-                <img class="m-2" src="assets/minus.png" style="width: 53px;" (click)="removeSSC(i)">
+                <div class="col-md-1">
+                  <img src="assets/rem.png"(click)="removeSSC(i)">
+                </div>
+                
               </div>
             </div>
           </div>
@@ -120,37 +120,33 @@
           <div formArrayName="hsc">
             <div class="d-flex main justify-content-between">
               <label class="m-2">HSC</label>
-              <img class="m-2" src="assets/add.png" style="width: 25px;" (click)="onAddSubjectOfHSC()">
+              <img class="m-2" src="assets/add.png"(click)="onAddSubjectOfHSC()">
             </div>
             <div class="form-group" *ngFor="let hscControl of formDataHSC.controls; let i=index" formGroupName="{{i}}">
-              <div class="row" style="margin-top: 5px;">
+              <div class="row" >
 
                 <div class="col-md-6">
-                  <select class="form-control" style="padding: 10px;" formControlName="subject">
+                  <select class="form-control" formControlName="subject">
                     <option value="">-- Select Subject -- </option>
                     <option *ngFor="let hscSub of hscSubjects; let i=index" value="{{hscSub}}">
                       {{hscSub}}
                     </option>
-                    <!-- <option value="Math">Math</option>
-                    <option value="English">English</option>
-                    <option value="Physics">Physics</option>
-                    <option value="Chemistry">Chemistry</option> -->
+
                   </select>
                 </div>
 
                 <div class="col-md-5">
-                  <select class="form-control" formControlName="gpa" id="gpa" style="padding: 10px;">
+                  <select class="form-control" formControlName="gpa" id="gpa">
                     <option value="">-- Select Grade -- </option>
                     <option *ngFor="let grade of grades; let i=index" value="{{grade}}">
                       {{grade}}
                     </option>
-                    <!-- <option value="5.00">5.00</option>
-                    <option value="4.50">4.50</option>
-                    <option value="4.00">4.00</option>
-                    <option value="3.50">3.50</option> -->
+
                   </select>
                 </div>
-                <img class="m-2" src="assets/minus.png" style="width: 53px; " (click)="removeHSC(i)">
+                <div class="col-md-1">
+                  <img src="assets/rem.png" (click)="removeHSC(i)">
+                </div>
               </div>
             </div>
           </div>
@@ -159,7 +155,7 @@
             <div class="row">
               <div class="col-12">
                 <button type="submit" class="btn w-100 fw-bold" [disabled]="signUpForm.invalid"
-                  style="background-color: #6460D1; color: white;">Submit</button>
+                 >{{editmode?'Update' : 'Register'}}</button>
               </div>
             </div>
           </div>
