--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -3,10 +3,16 @@
     <div class="col-lg-9">
       <!-- <h1 class="mb-3">Register</h1> -->
       <form [formGroup]="signUpForm" (ngSubmit)="onSubmit()">
-        <div class="row g-3">
-          <h3>{{editmode?'Edit Student' : 'Student Information'}}</h3>
-          <hr />
-          <div class="col-md-12">
+
+        <h2>{{editmode?'Edit Student' : 'Student Information'}}
+          <button class="btn" routerLink="/students" style="float: right; width: 10%; background-color: white;color:#6460D1;font-weight:600; margin-top: 10px;">
+            Back
+            <img src="assets/images/left.png" style="width: 15px;">
+          </button>     
+        </h2>
+        <hr/>
+        <div class="row g-3">    
+          <div class="col-md-6">
             <label for="firstName" class="form-label">First Name
               <span *ngIf="!signUpForm.get('firstName')?.valid && signUpForm.get('firstName')?.touched"
                 >*</span></label>
@@ -14,7 +20,7 @@
               formControlName="firstName">
           </div>
 
-          <div class="col-md-12">
+          <div class="col-md-6">
             <label for="lastName" class="form-label">Last Name</label>
             <span *ngIf="!signUpForm.get('lastName')?.valid && signUpForm.get('lastName')?.touched"
               >*</span>
@@ -54,7 +60,7 @@
             </select>
           </div>
 
-          <div class="col-md-12">
+          <div class="col-md-6">
             <label for="contact" class="form-label">Contact</label>
             <input type="tel" class="form-control" id="contact" pattern="^(?:\+?88)?01[15-9]\d{8}$"
               placeholder="Enter your number" formControlName="contact">
@@ -62,7 +68,7 @@
               class="help-block">Please enter a valid number!</span>
           </div>
 
-          <div class="col-md-12">
+          <div class="col-md-6">
             <label for="address" class="form-label"> Address
               <span *ngIf="!signUpForm.get('address')?.valid && signUpForm.get('address')?.touched"
                 >*</span>
@@ -85,10 +91,10 @@
           <div formArrayName="ssc">
             <div class="d-flex main justify-content-between">
               <label class="m-2">SSC</label>
-              <img class="m-2" src="assets/add.png" (click)="onAddSubjectOfSSC()">
+              <img class="m-2" src="assets/images/add.png" (click)="onAddSubjectOfSSC()">
             </div>
-            <div class="form-group" *ngFor="let sscControl of formDataSSC.controls; let i=index" formGroupName="{{i}}">
-              <div class="row">
+            <div class="form-group" *ngFor="let sscControl of sscFromControl.controls; let i=index" formGroupName="{{i}}">
+              <div class="row" style="padding: 5px;">
                 <div class="col-md-6">
                   <select class="form-control" formControlName="subject" id="{{i}}" #subject
                     >
@@ -108,7 +114,7 @@
                   </select>
                 </div>
                 <div class="col-md-1">
-                  <img src="assets/rem.png"(click)="removeSSC(i)">
+                  <img src="assets/images/cross-circle.png"(click)="removeSSC(i)">
                 </div>
                 
               </div>
@@ -120,10 +126,10 @@
           <div formArrayName="hsc">
             <div class="d-flex main justify-content-between">
               <label class="m-2">HSC</label>
-              <img class="m-2" src="assets/add.png"(click)="onAddSubjectOfHSC()">
+              <img class="m-2" src="assets/images/add.png"(click)="onAddSubjectOfHSC()">
             </div>
             <div class="form-group" *ngFor="let hscControl of formDataHSC.controls; let i=index" formGroupName="{{i}}">
-              <div class="row" >
+              <div class="row" style="padding: 5px;" >
 
                 <div class="col-md-6">
                   <select class="form-control" formControlName="subject">
@@ -145,7 +151,7 @@
                   </select>
                 </div>
                 <div class="col-md-1">
-                  <img src="assets/rem.png" (click)="removeHSC(i)">
+                  <img src="assets/images/cross-circle.png" (click)="removeHSC(i)">
                 </div>
               </div>
             </div>
@@ -154,7 +160,7 @@
           <div class="col-12">
             <div class="row">
               <div class="col-12">
-                <button type="submit" class="btn w-100 fw-bold" [disabled]="signUpForm.invalid"
+                <button type="submit" class="btn w-100 fw-bold" [disabled]="!signUpForm.valid"
                  >{{editmode?'Update' : 'Register'}}</button>
               </div>
             </div>
