--- a/src/app/student-profile/student-profile.component.html
+++ b/src/app/student-profile/student-profile.component.html
@@ -1,1 +1,57 @@
-<p>student-profile works!</p>
+<div class="container">
+    <div class="row" style="align-items: center;display: flex;">
+        <div class="col" style="width: 300px;">
+            <img src="assets/images/graduate.png" style="width: 150px; object-fit: cover;">
+            <img class="edit" src="assets/images/profile-edit.png" (click)="editStudent(studentInfo.id)">
+          </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            <h2>{{studentInfo? studentInfo.firstName:''}} {{studentInfo? studentInfo.lastName:''}}</h2>
+          </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            <h5>{{studentInfo? studentInfo.email:''}}</h5>
+          </div>
+    </div>
+    <!-- <hr/> -->
+    <div class="row row-cols-4">
+        <div class="col">
+            <img src="assets/images/dob.png" style="width: 15px;margin-bottom: 2px;">
+            {{studentInfo? studentInfo.dob:''}}
+        </div>
+        <div class="col">
+            <img src="assets/images/call.png" style="width: 15px;">
+            {{studentInfo? studentInfo.contact:''}}
+        </div>
+        <div class="col">
+            <img src="assets/images/exam.png" style="width: 15px;">
+            {{studentInfo? studentInfo.board:''}} Board
+        </div>
+        <div class="col">
+            <img src="assets/images/location.png" style="width: 18px;">
+            {{studentInfo? studentInfo.address:''}}
+        </div>
+    </div>
+
+    <hr/>
+    <h5>My Results</h5>
+    <h6>Secondary School Certificate</h6>
+    <div class="row row-cols-4">
+        
+        <div class="col" *ngFor="let res of studentInfo?.ssc">
+            {{res? res.subject:''}} : {{res? res.gpa:''}}
+        </div>
+        
+    </div>
+    <hr style="color: white;"/>
+    <h6>Higher Secondary School Certificate</h6>
+    <div class="row row-cols-4">
+        
+        <div class="col" *ngFor="let res of studentInfo?.hsc">
+            {{res? res.subject:''}} : {{res? res.gpa:''}}
+        </div>
+        
+    </div>
+</div>
