--- a/src/app/students/students.component.css
+++ b/src/app/students/students.component.css
@@ -7,7 +7,8 @@
 .info-container {
     background-color: #ffffff;
     font-size: 14px;
-    border: 5px solid #f5f4ff;;
+    border: 5px solid #f5f4ff;
+    ;
     border-radius: 20px;
     padding: 20px;
     margin-bottom: 15px;
