--- a/src/app/workspace/all-students-list-dashboard/all-students-list-dashboard.component.html
+++ b/src/app/workspace/all-students-list-dashboard/all-students-list-dashboard.component.html
@@ -26,7 +26,7 @@
                 <a> {{student.firstName}} {{student.lastName}}</a>
             </div>
             <div class="col">
-                Date of Birth: {{student.dob}}
+                Date of Birth: {{formatDate(student.dob)}}
             </div>
 
 
