--- a/src/app/workspace/login/login.component.html
+++ b/src/app/workspace/login/login.component.html
@@ -33,6 +33,10 @@
             <button class="btn" type="submit" [disabled]="f.invalid">Sign In</button>
             <span class="help-block" *ngIf="show">Please enter a valid
               email or mobile number!</span>
+              <div *ngIf="isLoading">
+                <app-loader></app-loader>
+              </div>
+              
           </div>
 
         </form>
