--- a/src/app/workspace/student-profile/student-profile.component.scss
+++ b/src/app/workspace/student-profile/student-profile.component.scss
@@ -15,10 +15,13 @@ hr {
 }
 
 .edit {
-
-
     cursor: pointer;
     width: 25px;
     margin-top: 70px;
 
+}
+
+h4 {
+    color: #4d4982;
+    font-weight: 600;
 }
