--- a/src/app/workspace/registration/registration.component.html
+++ b/src/app/workspace/registration/registration.component.html
@@ -12,7 +12,7 @@
           </button>
         </h2>
         <hr />
-        <div class="row g-3">
+        <div class="row mt-3">
           <div class="col-md-6">
             <label for="firstName" class="form-label">First Name
               <span *ngIf="!signUpForm.get('firstName')?.valid && signUpForm.get('firstName')?.touched">*</span></label>
